add and Fix test casess