@@ -1,6 +1,6 @@
 package org.uniprot.core.flatfile.antlr;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.*;
 
 import java.util.Arrays;
 import java.util.List;
@@ -11,6 +11,7 @@ import org.uniprot.core.flatfile.parser.impl.DefaultUniprotKBLineParserFactory;
 import org.uniprot.core.flatfile.parser.impl.ft.FtLineConverter;
 import org.uniprot.core.flatfile.parser.impl.ft.FtLineObject;
 import org.uniprot.core.flatfile.parser.impl.ft.FtLineObject.FTType;
+import org.uniprot.core.flatfile.parser.impl.ft.FtLineObject.Ligand;
 import org.uniprot.core.uniprotkb.feature.UniProtKBFeature;
 
 class FtLineParserTest {
@@ -225,7 +226,79 @@ class FtLineParserTest {
                 "N-linked (GlcNAc...); by host (Potential)",
                 null);
     }
+    
+    @Test 
+    void testBindingFeature() {
+    	 String ftLines = "FT   BINDING         152\n"
+                 + "FT                   /ligand=\"Zn(2+)\"\n"
+                 + "FT                   /ligand_id=\"ChEBI:CHEBI:29105\"\n"
+                 + "FT                   /ligand_label=\"1\"\n"
+                 + "FT                   /ligand_note=\"structural\"\n"
+                 + "FT                   /evidence=\"ECO:0000255|PROSITE-ProRule:PRU01239\"\n";
+    	 
+    	 UniprotKBLineParser<FtLineObject> parser =
+                 new DefaultUniprotKBLineParserFactory().createFtLineParser();
+         FtLineObject obj = parser.parse(ftLines);
+         assertEquals(1, obj.getFts().size());
+         verify(
+                 obj.getFts().get(0),
+                 FTType.BINDING,
+                 "152",
+                 "152",
+                 null,
+                 null);
+         verifyEvidences(
+                 obj,
+                 obj.getFts().get(0),
+                 List.of("ECO:0000255|PROSITE-ProRule:PRU01239"
+                         ));
+         Ligand ligand = obj.getFts().get(0).getLigand();
+         Ligand ligandPart = obj.getFts().get(0).getLigandPart();
+         verifyLigand(ligand, "Zn(2+)", "ChEBI:CHEBI:29105", "1", "structural");
+         assertNull(ligandPart);
+    }
+    
+    @Test
+    void testBindingFeatureWithLigandPart() {
+    	  String ftLines = "FT   BINDING         692..697\n"
+                  + "FT                   /ligand=\"divinyl chlorophyll-a'\"\n"
+                  + "FT                   /ligand_id=\"ChEBI:CHEBI:?????\"\n"
+                  + "FT                   /ligand_label=\"A1\"\n"
+                  + "FT                   /ligand_part=\"Mg\"\n"
+                  + "FT                   /ligand_part_id=\"ChEBI:CHEBI:4325\"\n"
+                  + "FT                   /note=\"axial ligand\"\n"
+                  + "FT                   /evidence=\"ECO:0000255|HAMAP-Rule:MF_00458\"\n";
+    	  
+    	  UniprotKBLineParser<FtLineObject> parser =
+                  new DefaultUniprotKBLineParserFactory().createFtLineParser();
+          FtLineObject obj = parser.parse(ftLines);
+          assertEquals(1, obj.getFts().size());
+          verify(
+                  obj.getFts().get(0),
+                  FTType.BINDING,
+                  "692",
+                  "697",
+                  "axial ligand",
+                  null);
+          verifyEvidences(
+                  obj,
+                  obj.getFts().get(0),
+                  List.of("ECO:0000255|HAMAP-Rule:MF_00458"
+                          ));
+          Ligand ligand = obj.getFts().get(0).getLigand();
+          Ligand ligandPart = obj.getFts().get(0).getLigandPart();
+          verifyLigand(ligand, "divinyl chlorophyll-a'", "ChEBI:CHEBI:?????", "A1", null);
+          verifyLigand(ligandPart, "Mg", "ChEBI:CHEBI:4325", null, null);
+    	  
+    }
 
+    private void verifyLigand(Ligand ligand, String name, String id, String label, String note) {
+    	assertEquals(name, ligand.getName());
+    	assertEquals(id, ligand.getId());
+    	assertEquals(label, ligand.getLabel());
+    	assertEquals(note, ligand.getNote());
+    	
+    }
     @Test
     void testUnknown() {
         String ftLines =
@@ -272,10 +345,9 @@ class FtLineParserTest {
         verifyEvidences(
                 obj,
                 obj.getFts().get(0),
-                Arrays.asList(
-                        new String[] {
+                List.of(
                             "ECO:0000006|PubMed:20858735", "ECO:0000006|PubMed:23640942"
-                        }));
+                        ));
     }
 
     @Test
@@ -314,7 +386,7 @@ class FtLineParserTest {
         verifyEvidences(
                 obj,
                 obj.getFts().get(1),
-                Arrays.asList(new String[] {"ECO:0000006|PubMed:20858735", "ECO:0000006"}));
+                List.of("ECO:0000006|PubMed:20858735", "ECO:0000006"));
     }
 
     @Test
